# RVC-Android

./: .gitignore  NOTE.md  QAI.md  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/ouor/rvcandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  qnn_synth_runtime.cpp  qnn_synth_runtime.h  rvc_hubert_runner_main.cpp  rvc_qnn_jni.cpp  rvc_rmvpe_runner_main.cpp  rvc_synth_runner_main.cpp  wire_protocol.h  wire_protocol_io.h
app/src/main/java/com/ouor/rvcandroid/: MainActivity.kt
app/src/main/java/com/ouor/rvcandroid/audio/: AudioData.kt  AudioFormat.kt  AudioIo.kt  AudioMeta.kt  FFmpegDecoder.kt  FFmpegEncoder.kt  HistoryCache.kt  PcmRecorder.kt  PreviewPlayer.kt  Resampler.kt  SafCache.kt  WavIo.kt  Waveform.kt
app/src/main/java/com/ouor/rvcandroid/inference/: HubertEmbedder.kt  ModelLoadStatus.kt  ModelMetadata.kt  OrtRuntime.kt  QnnHubertEmbedder.kt  QnnHubertRunner.kt  QnnNative.kt  QnnRmvpePitchExtractor.kt  QnnRmvpeRunner.kt  QnnRvcSynthesizer.kt  QnnSynthRunner.kt  RmvpePitchExtractor.kt  RvcPipeline.kt  RvcSynth.kt  RvcSynthesizer.kt  Tensors.kt
app/src/main/java/com/ouor/rvcandroid/ui/: ConversionScreen.kt  ConversionViewModel.kt
app/src/main/java/com/ouor/rvcandroid/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ouor/rvcandroid/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: build_calibration_corpus.py  build_synth_calibration.py  compile_hubert_aihub.py  compile_rmvpe_aihub.py  compile_synth_aihub.py  convert_synth_to_qnn.sh  export_static_synthesizer.py  pull_vendor_deps.sh  setup_qnn_libs.sh
